--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@firebase/firestore": "^4.2.0",
     "@firebase/storage": "^0.11.2",
     "@formcarry/react": "^1.0.4",
+    "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.0.1",
-  
     "antd": "^5.10.1",
     "aos": "^2.3.4",
     "classnames": "^2.4.0",
